--- a/notebooks/stack_uber_fare.ipynb
+++ b/notebooks/stack_uber_fare.ipynb
@@ -29,36 +29,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 154,
       "metadata": {
-        "id": "IsSR1IeOHMww",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "36ca251d-b7ea-42d4-b385-94cf79323e96"
+        "id": "IsSR1IeOHMww"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Requirement already satisfied: category_encoders in /usr/local/lib/python3.11/dist-packages (2.8.1)\n",
-            "Requirement already satisfied: numpy>=1.14.0 in /usr/local/lib/python3.11/dist-packages (from category_encoders) (2.0.2)\n",
-            "Requirement already satisfied: pandas>=1.0.5 in /usr/local/lib/python3.11/dist-packages (from category_encoders) (2.2.2)\n",
-            "Requirement already satisfied: patsy>=0.5.1 in /usr/local/lib/python3.11/dist-packages (from category_encoders) (1.0.1)\n",
-            "Requirement already satisfied: scikit-learn>=1.6.0 in /usr/local/lib/python3.11/dist-packages (from category_encoders) (1.6.1)\n",
-            "Requirement already satisfied: scipy>=1.0.0 in /usr/local/lib/python3.11/dist-packages (from category_encoders) (1.16.0)\n",
-            "Requirement already satisfied: statsmodels>=0.9.0 in /usr/local/lib/python3.11/dist-packages (from category_encoders) (0.14.5)\n",
-            "Requirement already satisfied: python-dateutil>=2.8.2 in /usr/local/lib/python3.11/dist-packages (from pandas>=1.0.5->category_encoders) (2.9.0.post0)\n",
-            "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.11/dist-packages (from pandas>=1.0.5->category_encoders) (2025.2)\n",
-            "Requirement already satisfied: tzdata>=2022.7 in /usr/local/lib/python3.11/dist-packages (from pandas>=1.0.5->category_encoders) (2025.2)\n",
-            "Requirement already satisfied: joblib>=1.2.0 in /usr/local/lib/python3.11/dist-packages (from scikit-learn>=1.6.0->category_encoders) (1.5.1)\n",
-            "Requirement already satisfied: threadpoolctl>=3.1.0 in /usr/local/lib/python3.11/dist-packages (from scikit-learn>=1.6.0->category_encoders) (3.6.0)\n",
-            "Requirement already satisfied: packaging>=21.3 in /usr/local/lib/python3.11/dist-packages (from statsmodels>=0.9.0->category_encoders) (25.0)\n",
-            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.11/dist-packages (from python-dateutil>=2.8.2->pandas>=1.0.5->category_encoders) (1.17.0)\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "''' !pip install -q gdown '''\n",
         "import gdown\n",
@@ -82,12 +57,14 @@
         "from sklearn.ensemble import StackingRegressor\n",
         "from sklearn.linear_model import LinearRegression\n",
         "from sklearn.ensemble import RandomForestRegressor\n",
-        "from xgboost import XGBRegressor\n",
         "from sklearn.linear_model import Ridge\n",
         "''' ! pip install -q category_encoders '''\n",
         "from category_encoders import TargetEncoder\n",
-        "!pip install category_encoders\n",
-        "import category_encoders as ce"
+        "''' !pip install category_encoders '''\n",
+        "import category_encoders as ce\n",
+        "''' ! pip install optuna '''\n",
+        "import optuna\n",
+        "import xgboost as xgb"
       ]
     },
     {
@@ -104,9 +81,9 @@
           "height": 400
         },
         "id": "1N4jUZ-jHgc0",
-        "outputId": "fbe79e1a-7963-4285-fe16-b00a11ca0015"
+        "outputId": "32c9d4eb-89a5-4fd5-a91d-8eaaff3d21e2"
       },
-      "execution_count": 52,
+      "execution_count": 134,
       "outputs": [
         {
           "output_type": "stream",
@@ -115,7 +92,7 @@
             "Downloading...\n",
             "From: https://drive.google.com/uc?id=1nvFRd8uiUV8OfoihMOXZ0Emle1ksxwW1\n",
             "To: /content/uber.csv\n",
-            "100%|██████████| 23.5M/23.5M [00:00<00:00, 52.3MB/s]\n"
+            "100%|██████████| 23.5M/23.5M [00:00<00:00, 55.4MB/s]\n"
           ]
         },
         {
@@ -145,7 +122,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-cd7cd53d-37e6-410f-98a0-fdedc16b423b\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-48a71faa-aee1-44f7-81f7-e0b8d2510a6d\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -242,7 +219,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-cd7cd53d-37e6-410f-98a0-fdedc16b423b')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-48a71faa-aee1-44f7-81f7-e0b8d2510a6d')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -294,12 +271,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-cd7cd53d-37e6-410f-98a0-fdedc16b423b button.colab-df-convert');\n",
+              "        document.querySelector('#df-48a71faa-aee1-44f7-81f7-e0b8d2510a6d button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-cd7cd53d-37e6-410f-98a0-fdedc16b423b');\n",
+              "        const element = document.querySelector('#df-48a71faa-aee1-44f7-81f7-e0b8d2510a6d');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -319,8 +296,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-a360134a-8339-43f6-a98f-71d22f9a66d7\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-a360134a-8339-43f6-a98f-71d22f9a66d7')\"\n",
+              "    <div id=\"df-f6fd1f9e-c794-4f73-8fd0-94b1bf14ec50\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-f6fd1f9e-c794-4f73-8fd0-94b1bf14ec50')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -439,7 +416,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-a360134a-8339-43f6-a98f-71d22f9a66d7 button');\n",
+              "            document.querySelector('#df-f6fd1f9e-c794-4f73-8fd0-94b1bf14ec50 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -455,7 +432,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 52
+          "execution_count": 134
         }
       ]
     },
@@ -494,7 +471,7 @@
       "metadata": {
         "id": "jDaf15hFHiVV"
       },
-      "execution_count": 53,
+      "execution_count": 135,
       "outputs": []
     },
     {
@@ -622,7 +599,7 @@
       "metadata": {
         "id": "Y6L8GKHNJy1n"
       },
-      "execution_count": 54,
+      "execution_count": 136,
       "outputs": []
     },
     {
@@ -669,7 +646,7 @@
       "metadata": {
         "id": "RT53XqJToo8x"
       },
-      "execution_count": 55,
+      "execution_count": 137,
       "outputs": []
     },
     {
@@ -826,7 +803,7 @@
       "metadata": {
         "id": "IkVS0VkYJ-WD"
       },
-      "execution_count": 57,
+      "execution_count": 138,
       "outputs": []
     },
     {
@@ -850,7 +827,7 @@
       "metadata": {
         "id": "4pwGHlr-KAGS"
       },
-      "execution_count": 58,
+      "execution_count": 139,
       "outputs": []
     },
     {
@@ -873,7 +850,7 @@
       "metadata": {
         "id": "NDUm-VIATZGT"
       },
-      "execution_count": 59,
+      "execution_count": 140,
       "outputs": []
     },
     {
@@ -895,7 +872,7 @@
       "metadata": {
         "id": "6fEe9lGZKBxP"
       },
-      "execution_count": 60,
+      "execution_count": 141,
       "outputs": []
     },
     {
@@ -918,7 +895,7 @@
       "metadata": {
         "id": "dkHafC2qKDlS"
       },
-      "execution_count": 61,
+      "execution_count": 142,
       "outputs": []
     },
     {
@@ -940,7 +917,7 @@
       "metadata": {
         "id": "41SM-S7uKFBW"
       },
-      "execution_count": 68,
+      "execution_count": 143,
       "outputs": []
     },
     {
@@ -962,7 +939,7 @@
       "metadata": {
         "id": "CZpDWGRE8N7K"
       },
-      "execution_count": 67,
+      "execution_count": 144,
       "outputs": []
     },
     {
@@ -986,7 +963,7 @@
       "metadata": {
         "id": "Or2MElEsvQLm"
       },
-      "execution_count": 63,
+      "execution_count": 145,
       "outputs": []
     },
     {
@@ -1030,7 +1007,7 @@
       "metadata": {
         "id": "Y3wOVjihoECG"
       },
-      "execution_count": 71,
+      "execution_count": 146,
       "outputs": []
     },
     {
@@ -1046,17 +1023,11 @@
       "cell_type": "code",
       "source": [
         "passenger_features = ['passenger_count']\n",
-        "\n",
         "binary_features = ['is_weekend', 'is_rush_hour']\n",
-        "\n",
         "distance_features = ['distance_km', 'manhattan_km', 'distance_diff', 'grid_distance_to_manhattan', 'grid_distance_to_direct']\n",
-        "\n",
         "cyclic_features = ['hour', 'bearing', 'weekday']\n",
-        "\n",
         "categorical_features = ['month', 'pickup_grid', 'dropoff_grid']\n",
-        "\n",
         "ratio_features = ['distance_diff', 'distance_ratio', 'grid_to_manhattan_ratio', 'grid_to_direct_ratio']\n",
-        "\n",
         "one_hot = ['pickup_cluster', 'dropoff_cluster']\n",
         "\n",
         "preprocessor = ColumnTransformer([\n",
@@ -1069,10 +1040,32 @@
         "    ('oh', onehot_pipeline, one_hot),\n",
         "])\n",
         "\n",
+        "rf_model = RandomForestRegressor(\n",
+        "    n_estimators=182,\n",
+        "    max_depth=41,\n",
+        "    min_samples_split=15,\n",
+        "    min_samples_leaf=13,\n",
+        "    max_features='sqrt',\n",
+        "    random_state=42,\n",
+        "    n_jobs=-1\n",
+        ")\n",
+        "\n",
+        "xgb_model = xgb.XGBRegressor(\n",
+        "    n_estimators=149,\n",
+        "    max_depth=3,\n",
+        "    learning_rate=0.16779455063297968,\n",
+        "    min_child_weight=12,\n",
+        "    subsample=0.8434805496582364,\n",
+        "    colsample_bytree=0.795643706710287,\n",
+        "    random_state=42,\n",
+        "    n_jobs=-1,\n",
+        "    tree_method='hist'\n",
+        ")\n",
+        "\n",
         "base_learners = [\n",
         "    ('lr', LinearRegression()),\n",
-        "    ('rf', RandomForestRegressor(n_estimators=50, random_state=42, n_jobs=-1)),\n",
-        "    ('xgb', XGBRegressor(n_estimators=50, random_state=42, n_jobs=-1, tree_method='hist')),\n",
+        "    ('rf', rf_model),\n",
+        "    ('xgb', xgb_model)\n",
         "]\n",
         "\n",
         "meta_model = Ridge(alpha=1.0)\n",
@@ -1091,23 +1084,16 @@
         "    ('preprocessing', preprocessor),\n",
         "    ('model', stacked_model)\n",
         "])\n",
+        "\n",
         "full_pipeline.set_output(transform='pandas')\n",
-        "_=full_pipeline"
+        "\n",
+        "_ = full_pipeline"
       ],
       "metadata": {
-        "id": "EpjiwM-iKGnH"
+        "id": "0kZ_58p_Ml0F"
       },
-      "execution_count": 72,
+      "execution_count": 158,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# Metrics"
-      ],
-      "metadata": {
-        "id": "QS8w2xdEcO98"
-      }
     },
     {
       "cell_type": "code",
@@ -1121,31 +1107,33 @@
         "y_val_pred = full_pipeline.predict(X_val)\n",
         "\n",
         "val_rmse = np.sqrt(mean_squared_error(y_val, y_val_pred))\n",
+        "val_mse = mean_squared_error(y_val, y_val_pred)\n",
         "val_mae = mean_absolute_error(y_val, y_val_pred)\n",
         "val_r2 = r2_score(y_val, y_val_pred)\n",
         "\n",
         "print(\"Validation Set Metrics (from subtrain-trained model):\")\n",
         "print(f\"RMSE: {val_rmse:.4f}\")\n",
-        "print(f\"MAE:  {val_mae:.4f}\")\n",
-        "print(f\"R²:   {val_r2:.4f}\")"
+        "print(f\"MSE: {val_mse:.4f}\")\n",
+        "print(f\"MAE: {val_mae:.4f}\")\n",
+        "print(f\"R²:  {val_r2:.4f}\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "PsrE13AfKLZl",
-        "outputId": "bbd792f6-7801-4dff-e508-820a1fda17f4"
+        "id": "WFP06gEgZUCo",
+        "outputId": "3ef25950-5614-4ccf-d9e0-f24eebee9925"
       },
-      "execution_count": 73,
+      "execution_count": 159,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Validation Set Metrics (from subtrain-trained model):\n",
-            "RMSE: 0.2619\n",
-            "MAE:  0.1685\n",
-            "R²:   0.7702\n"
+            "RMSE: 0.2531\n",
+            "MAE:  0.1654\n",
+            "R²:   0.7853\n"
           ]
         }
       ]
