--- a/notebooks/stack_uber_fare.ipynb
+++ b/notebooks/stack_uber_fare.ipynb
@@ -29,13 +29,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 154,
+      "execution_count": 62,
       "metadata": {
-        "id": "IsSR1IeOHMww"
+        "id": "IsSR1IeOHMww",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "71aac19b-6725-4f06-99e9-5c3098426920"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: optuna in /usr/local/lib/python3.11/dist-packages (4.4.0)\n",
+            "Requirement already satisfied: alembic>=1.5.0 in /usr/local/lib/python3.11/dist-packages (from optuna) (1.16.4)\n",
+            "Requirement already satisfied: colorlog in /usr/local/lib/python3.11/dist-packages (from optuna) (6.9.0)\n",
+            "Requirement already satisfied: numpy in /usr/local/lib/python3.11/dist-packages (from optuna) (2.0.2)\n",
+            "Requirement already satisfied: packaging>=20.0 in /usr/local/lib/python3.11/dist-packages (from optuna) (25.0)\n",
+            "Requirement already satisfied: sqlalchemy>=1.4.2 in /usr/local/lib/python3.11/dist-packages (from optuna) (2.0.41)\n",
+            "Requirement already satisfied: tqdm in /usr/local/lib/python3.11/dist-packages (from optuna) (4.67.1)\n",
+            "Requirement already satisfied: PyYAML in /usr/local/lib/python3.11/dist-packages (from optuna) (6.0.2)\n",
+            "Requirement already satisfied: Mako in /usr/lib/python3/dist-packages (from alembic>=1.5.0->optuna) (1.1.3)\n",
+            "Requirement already satisfied: typing-extensions>=4.12 in /usr/local/lib/python3.11/dist-packages (from alembic>=1.5.0->optuna) (4.14.1)\n",
+            "Requirement already satisfied: greenlet>=1 in /usr/local/lib/python3.11/dist-packages (from sqlalchemy>=1.4.2->optuna) (3.2.3)\n"
+          ]
+        }
+      ],
       "source": [
-        "''' !pip install -q gdown '''\n",
+        "!pip install -q gdown\n",
         "import gdown\n",
         "import pandas as pd\n",
         "import numpy as np\n",
@@ -53,16 +75,16 @@
         "from sklearn.metrics import mean_squared_error, mean_absolute_error, r2_score\n",
         "import shap\n",
         "from sklearn.linear_model import LinearRegression\n",
-        "from sklearn.model_selection import cross_validate\n",
+        "from sklearn.model_selection import cross_validate,  cross_val_score, KFold\n",
         "from sklearn.ensemble import StackingRegressor\n",
         "from sklearn.linear_model import LinearRegression\n",
         "from sklearn.ensemble import RandomForestRegressor\n",
         "from sklearn.linear_model import Ridge\n",
-        "''' ! pip install -q category_encoders '''\n",
+        "! pip install -q category_encoders\n",
         "from category_encoders import TargetEncoder\n",
         "''' !pip install category_encoders '''\n",
         "import category_encoders as ce\n",
-        "''' ! pip install optuna '''\n",
+        "! pip install optuna\n",
         "import optuna\n",
         "import xgboost as xgb"
       ]
@@ -81,9 +103,9 @@
           "height": 400
         },
         "id": "1N4jUZ-jHgc0",
-        "outputId": "32c9d4eb-89a5-4fd5-a91d-8eaaff3d21e2"
+        "outputId": "de70276a-6f8d-4c0b-e871-640585af591f"
       },
-      "execution_count": 134,
+      "execution_count": 63,
       "outputs": [
         {
           "output_type": "stream",
@@ -92,7 +114,7 @@
             "Downloading...\n",
             "From: https://drive.google.com/uc?id=1nvFRd8uiUV8OfoihMOXZ0Emle1ksxwW1\n",
             "To: /content/uber.csv\n",
-            "100%|██████████| 23.5M/23.5M [00:00<00:00, 55.4MB/s]\n"
+            "100%|██████████| 23.5M/23.5M [00:00<00:00, 51.7MB/s]\n"
           ]
         },
         {
@@ -122,7 +144,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-48a71faa-aee1-44f7-81f7-e0b8d2510a6d\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-5ca689ea-0540-4c2b-8eeb-64cb1f7fb1e3\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -219,7 +241,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-48a71faa-aee1-44f7-81f7-e0b8d2510a6d')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-5ca689ea-0540-4c2b-8eeb-64cb1f7fb1e3')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -271,12 +293,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-48a71faa-aee1-44f7-81f7-e0b8d2510a6d button.colab-df-convert');\n",
+              "        document.querySelector('#df-5ca689ea-0540-4c2b-8eeb-64cb1f7fb1e3 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-48a71faa-aee1-44f7-81f7-e0b8d2510a6d');\n",
+              "        const element = document.querySelector('#df-5ca689ea-0540-4c2b-8eeb-64cb1f7fb1e3');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -296,8 +318,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-f6fd1f9e-c794-4f73-8fd0-94b1bf14ec50\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-f6fd1f9e-c794-4f73-8fd0-94b1bf14ec50')\"\n",
+              "    <div id=\"df-34e250bb-0197-445b-969e-31cf303ec758\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-34e250bb-0197-445b-969e-31cf303ec758')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -416,7 +438,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-f6fd1f9e-c794-4f73-8fd0-94b1bf14ec50 button');\n",
+              "            document.querySelector('#df-34e250bb-0197-445b-969e-31cf303ec758 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -432,7 +454,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 134
+          "execution_count": 63
         }
       ]
     },
@@ -471,7 +493,7 @@
       "metadata": {
         "id": "jDaf15hFHiVV"
       },
-      "execution_count": 135,
+      "execution_count": 64,
       "outputs": []
     },
     {
@@ -599,7 +621,7 @@
       "metadata": {
         "id": "Y6L8GKHNJy1n"
       },
-      "execution_count": 136,
+      "execution_count": 65,
       "outputs": []
     },
     {
@@ -646,7 +668,7 @@
       "metadata": {
         "id": "RT53XqJToo8x"
       },
-      "execution_count": 137,
+      "execution_count": 66,
       "outputs": []
     },
     {
@@ -803,7 +825,7 @@
       "metadata": {
         "id": "IkVS0VkYJ-WD"
       },
-      "execution_count": 138,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -827,7 +849,7 @@
       "metadata": {
         "id": "4pwGHlr-KAGS"
       },
-      "execution_count": 139,
+      "execution_count": 68,
       "outputs": []
     },
     {
@@ -850,7 +872,7 @@
       "metadata": {
         "id": "NDUm-VIATZGT"
       },
-      "execution_count": 140,
+      "execution_count": 69,
       "outputs": []
     },
     {
@@ -866,13 +888,13 @@
       "cell_type": "code",
       "source": [
         "distance_pipeline = Pipeline([\n",
-        "    ('scaler', StandardScaler())\n",
+        "    ('scaler', StandardScaler()),\n",
         "])"
       ],
       "metadata": {
         "id": "6fEe9lGZKBxP"
       },
-      "execution_count": 141,
+      "execution_count": 70,
       "outputs": []
     },
     {
@@ -895,7 +917,7 @@
       "metadata": {
         "id": "dkHafC2qKDlS"
       },
-      "execution_count": 142,
+      "execution_count": 71,
       "outputs": []
     },
     {
@@ -917,7 +939,7 @@
       "metadata": {
         "id": "41SM-S7uKFBW"
       },
-      "execution_count": 143,
+      "execution_count": 72,
       "outputs": []
     },
     {
@@ -939,7 +961,7 @@
       "metadata": {
         "id": "CZpDWGRE8N7K"
       },
-      "execution_count": 144,
+      "execution_count": 73,
       "outputs": []
     },
     {
@@ -963,7 +985,7 @@
       "metadata": {
         "id": "Or2MElEsvQLm"
       },
-      "execution_count": 145,
+      "execution_count": 74,
       "outputs": []
     },
     {
@@ -1007,7 +1029,7 @@
       "metadata": {
         "id": "Y3wOVjihoECG"
       },
-      "execution_count": 146,
+      "execution_count": 75,
       "outputs": []
     },
     {
@@ -1068,12 +1090,12 @@
         "    ('xgb', xgb_model)\n",
         "]\n",
         "\n",
-        "meta_model = Ridge(alpha=1.0)\n",
+        "meta_model = Ridge(alpha=0.30288462605316574)\n",
         "\n",
         "stacked_model = StackingRegressor(\n",
         "    estimators=base_learners,\n",
         "    final_estimator=meta_model,\n",
-        "    passthrough=False,\n",
+        "    passthrough=True,\n",
         "    n_jobs=-1\n",
         ")\n",
         "\n",
@@ -1092,7 +1114,7 @@
       "metadata": {
         "id": "0kZ_58p_Ml0F"
       },
-      "execution_count": 158,
+      "execution_count": 76,
       "outputs": []
     },
     {
@@ -1103,40 +1125,144 @@
         ")\n",
         "\n",
         "full_pipeline.fit(X_subtrain, y_subtrain)\n",
+        "y_val_pred_log = full_pipeline.predict(X_val)\n",
         "\n",
-        "y_val_pred = full_pipeline.predict(X_val)\n",
+        "y_val_true = np.expm1(y_val)\n",
+        "y_val_pred = np.expm1(y_val_pred_log)\n",
         "\n",
-        "val_rmse = np.sqrt(mean_squared_error(y_val, y_val_pred))\n",
-        "val_mse = mean_squared_error(y_val, y_val_pred)\n",
-        "val_mae = mean_absolute_error(y_val, y_val_pred)\n",
-        "val_r2 = r2_score(y_val, y_val_pred)\n",
+        "val_rmse = np.sqrt(mean_squared_error(y_val_true, y_val_pred))\n",
+        "val_mse = mean_squared_error(y_val_true, y_val_pred)\n",
+        "val_mae = mean_absolute_error(y_val_true, y_val_pred)\n",
+        "val_r2 = r2_score(y_val_true, y_val_pred)\n",
         "\n",
-        "print(\"Validation Set Metrics (from subtrain-trained model):\")\n",
-        "print(f\"RMSE: {val_rmse:.4f}\")\n",
-        "print(f\"MSE: {val_mse:.4f}\")\n",
-        "print(f\"MAE: {val_mae:.4f}\")\n",
-        "print(f\"R²:  {val_r2:.4f}\")"
+        "print(\"Validation Set Metrics (Un-logged, in dollars):\")\n",
+        "print(f\"RMSE: ${val_rmse:.4f}\")\n",
+        "print(f\"MSE:  ${val_mse:.4f}\")\n",
+        "print(f\"MAE:  ${val_mae:.4f}\")\n",
+        "print(f\"R²:   {val_r2:.4f}\")\n",
+        "\n",
+        "full_pipeline.fit(X_train, y_train)\n",
+        "y_holdout_pred_log = full_pipeline.predict(X_holdout)\n",
+        "\n",
+        "y_holdout_true = np.expm1(y_holdout)\n",
+        "y_holdout_pred = np.expm1(y_holdout_pred_log)\n",
+        "\n",
+        "holdout_rmse = np.sqrt(mean_squared_error(y_holdout_true, y_holdout_pred))\n",
+        "holdout_mse = mean_squared_error(y_holdout_true, y_holdout_pred)\n",
+        "holdout_mae = mean_absolute_error(y_holdout_true, y_holdout_pred)\n",
+        "holdout_r2 = r2_score(y_holdout_true, y_holdout_pred)\n",
+        "\n",
+        "print(\"\\nHold-Out Set Metrics (Un-logged, in dollars):\")\n",
+        "print(f\"RMSE: ${holdout_rmse:.4f}\")\n",
+        "print(f\"MSE:  ${holdout_mse:.4f}\")\n",
+        "print(f\"MAE:  ${holdout_mae:.4f}\")\n",
+        "print(f\"R²:   {holdout_r2:.4f}\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "WFP06gEgZUCo",
-        "outputId": "3ef25950-5614-4ccf-d9e0-f24eebee9925"
+        "outputId": "789b8180-139f-4f4f-a12a-52236fd657b7"
       },
-      "execution_count": 159,
+      "execution_count": 77,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Validation Set Metrics (from subtrain-trained model):\n",
-            "RMSE: 0.2531\n",
-            "MAE:  0.1654\n",
-            "R²:   0.7853\n"
+            "Validation Set Metrics (Un-logged, in dollars):\n",
+            "RMSE: $4.9203\n",
+            "MSE:  $24.2096\n",
+            "MAE:  $2.1511\n",
+            "R²:   0.7402\n",
+            "\n",
+            "Hold-Out Set Metrics (Un-logged, in dollars):\n",
+            "RMSE: $4.9464\n",
+            "MSE:  $24.4664\n",
+            "MAE:  $2.1442\n",
+            "R²:   0.7426\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X_sampled = X_holdout.sample(n=1000, random_state=42)\n",
+        "\n",
+        "X_sampled_transformed = full_pipeline[:-1].transform(X_sampled)\n",
+        "\n",
+        "model = full_pipeline.named_steps['model']\n",
+        "\n",
+        "explainer = shap.Explainer(model.predict, X_sampled_transformed)\n",
+        "shap_values = explainer(X_sampled_transformed)\n",
+        "\n",
+        "mean_abs_shap = np.abs(shap_values.values).mean(axis=0)\n",
+        "shap_importance_df = pd.DataFrame({\n",
+        "    'Feature': X_sampled_transformed.columns,\n",
+        "    'Mean |SHAP Value|': mean_abs_shap\n",
+        "}).sort_values(by='Mean |SHAP Value|', ascending=False).reset_index(drop=True)\n",
+        "\n",
+        "print(\"\\nSHAP Feature Importances (from 1,000-sample holdout):\")\n",
+        "print(shap_importance_df)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6hr0pUAR1LC-",
+        "outputId": "fde50879-acca-4a9a-ab63-a143c6f27a62"
+      },
+      "execution_count": 81,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "PermutationExplainer explainer: 1001it [19:07,  1.16s/it]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "SHAP Feature Importances (from 1,000-sample holdout):\n",
+            "                               Feature  Mean |SHAP Value|\n",
+            "0               dis_clean__distance_km           0.198418\n",
+            "1   dis_clean__grid_distance_to_direct           0.076075\n",
+            "2                 oh__pickup_cluster_0           0.061040\n",
+            "3                oh__pickup_cluster_16           0.046253\n",
+            "4              cat_clean__dropoff_grid           0.038880\n",
+            "..                                 ...                ...\n",
+            "56               oh__dropoff_cluster_7           0.000000\n",
+            "57              oh__dropoff_cluster_13           0.000000\n",
+            "58              oh__dropoff_cluster_17           0.000000\n",
+            "59              oh__dropoff_cluster_18           0.000000\n",
+            "60              oh__dropoff_cluster_19           0.000000\n",
+            "\n",
+            "[61 rows x 2 columns]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Summary\n",
+        "The model is generalising well, not overfitting or underfitting, and is accomplishing it's goal well. The top feature is distance which make sense."
+      ],
+      "metadata": {
+        "id": "LZwz3jyiCLB4"
+      }
     }
   ]
 }
