--- a/notebooks/stack_uber_fare.ipynb
+++ b/notebooks/stack_uber_fare.ipynb
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": 97,
       "metadata": {
         "id": "IsSR1IeOHMww"
       },
@@ -46,7 +46,7 @@
         "from sklearn.utils.validation import check_is_fitted\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.metrics import mean_squared_error, mean_absolute_error, r2_score\n",
-        "from sklearn.preprocessing import OrdinalEncoder, FunctionTransformer\n",
+        "from sklearn.preprocessing import OrdinalEncoder, FunctionTransformer, OneHotEncoder\n",
         "from sklearn.impute import SimpleImputer\n",
         "from sklearn.compose import ColumnTransformer\n",
         "from sklearn.pipeline import Pipeline\n",
@@ -84,9 +84,9 @@
           "height": 400
         },
         "id": "1N4jUZ-jHgc0",
-        "outputId": "43a47c70-7110-4e43-fe53-0d1799b5c7e9"
+        "outputId": "fb24326c-1a71-442d-a8f8-13fc1d4d2c68"
       },
-      "execution_count": 49,
+      "execution_count": 98,
       "outputs": [
         {
           "output_type": "stream",
@@ -95,7 +95,7 @@
             "Downloading...\n",
             "From: https://drive.google.com/uc?id=1nvFRd8uiUV8OfoihMOXZ0Emle1ksxwW1\n",
             "To: /content/uber.csv\n",
-            "100%|██████████| 23.5M/23.5M [00:00<00:00, 116MB/s]\n"
+            "100%|██████████| 23.5M/23.5M [00:00<00:00, 69.7MB/s]\n"
           ]
         },
         {
@@ -125,7 +125,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-094c5daa-1e71-4af7-9e22-00ebc3548c4e\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-edac7721-2c36-4926-98f6-27b274a93f32\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -222,7 +222,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-094c5daa-1e71-4af7-9e22-00ebc3548c4e')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-edac7721-2c36-4926-98f6-27b274a93f32')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -274,12 +274,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-094c5daa-1e71-4af7-9e22-00ebc3548c4e button.colab-df-convert');\n",
+              "        document.querySelector('#df-edac7721-2c36-4926-98f6-27b274a93f32 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-094c5daa-1e71-4af7-9e22-00ebc3548c4e');\n",
+              "        const element = document.querySelector('#df-edac7721-2c36-4926-98f6-27b274a93f32');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -299,8 +299,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-e9c99f2c-240b-4583-8fd3-8371d131e80f\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-e9c99f2c-240b-4583-8fd3-8371d131e80f')\"\n",
+              "    <div id=\"df-cd894c74-2f94-47dd-9a0c-e6a22fba72b1\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-cd894c74-2f94-47dd-9a0c-e6a22fba72b1')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -419,7 +419,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-e9c99f2c-240b-4583-8fd3-8371d131e80f button');\n",
+              "            document.querySelector('#df-cd894c74-2f94-47dd-9a0c-e6a22fba72b1 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -435,7 +435,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 49
+          "execution_count": 98
         }
       ]
     },
@@ -477,7 +477,7 @@
       "metadata": {
         "id": "jDaf15hFHiVV"
       },
-      "execution_count": 50,
+      "execution_count": 99,
       "outputs": []
     },
     {
@@ -649,7 +649,7 @@
       "metadata": {
         "id": "Y6L8GKHNJy1n"
       },
-      "execution_count": 51,
+      "execution_count": 100,
       "outputs": []
     },
     {
@@ -666,13 +666,44 @@
       "source": [
         "class FeatureEngineer(BaseEstimator, TransformerMixin):\n",
         "    def __init__(self):\n",
-        "        pass\n",
+        "        self._output_config = {\"transform\": \"default\"}\n",
         "\n",
         "    def fit(self, X, y=None):\n",
         "        return self\n",
         "\n",
         "    def transform(self, X):\n",
         "        X = X.copy()\n",
+        "\n",
+        "        def bin_time(hour):\n",
+        "            if 5 <= hour < 12:\n",
+        "                return 'morning'\n",
+        "            elif 12 <= hour < 17:\n",
+        "                return 'afternoon'\n",
+        "            elif 17 <= hour < 21:\n",
+        "                return 'evening'\n",
+        "            else:\n",
+        "                return 'night'\n",
+        "\n",
+        "        X['time_of_day'] = X['hour'].apply(bin_time)\n",
+        "        X['is_peak_hour'] = X['hour'].isin([7, 8, 9, 16, 17, 18, 19])\n",
+        "\n",
+        "        X['pickup_dropoff_same_grid'] = (X['pickup_grid'] == X['dropoff_grid']).astype(int)\n",
+        "\n",
+        "        X['distance_ratio'] = X['distance_km'] / X['manhattan_km']\n",
+        "        X['distance_ratio'].replace([np.inf, -np.inf], np.nan, inplace=True)\n",
+        "        X['distance_ratio'].fillna(1.0, inplace=True)\n",
+        "\n",
+        "        X['cluster_diff'] = np.abs(X['pickup_cluster'] - X['dropoff_cluster'])\n",
+        "\n",
+        "        X['distance_bearing_sin'] = X['distance_km'] * np.sin(np.radians(X['bearing']))\n",
+        "\n",
+        "        X['cluster_bearing_offset'] = (\n",
+        "            X['dropoff_cluster'] - X['pickup_cluster'] + X['bearing']\n",
+        "        )\n",
+        "\n",
+        "        X['hour_x_is_weekend'] = X['hour'] * X['is_weekend']\n",
+        "        X['hour_x_is_rush_hour'] = X['hour'] * X['is_rush_hour']\n",
+        "        X['distance_times_cluster_diff'] = X['distance_km'] * X['cluster_diff']\n",
         "\n",
         "        return X\n",
         "\n",
@@ -682,7 +713,7 @@
       "metadata": {
         "id": "RT53XqJToo8x"
       },
-      "execution_count": 52,
+      "execution_count": 125,
       "outputs": []
     },
     {
@@ -819,12 +850,44 @@
         "\n",
         "    def set_output(self, *, transform=None):\n",
         "        self._output_config[\"transform\"] = transform\n",
-        "        return self"
+        "        return self\n",
+        "\n",
+        "class FeatureClipper(BaseEstimator, TransformerMixin):\n",
+        "    def __init__(self, clip_range=(0.0, 99.0)):\n",
+        "        self.clip_range = clip_range\n",
+        "        self._output_config = {\"transform\": \"default\"}\n",
+        "\n",
+        "    def fit(self, X, y=None):\n",
+        "        X = pd.DataFrame(X)\n",
+        "        self.features_ = X.columns.tolist()\n",
+        "        self.lower_bounds_ = {}\n",
+        "        self.upper_bounds_ = {}\n",
+        "\n",
+        "        for col in self.features_:\n",
+        "            Q1 = X[col].quantile(self.clip_range[0] / 100)\n",
+        "            Q3 = X[col].quantile(self.clip_range[1] / 100)\n",
+        "            IQR = Q3 - Q1\n",
+        "            self.lower_bounds_[col] = Q1 - 1.5 * IQR\n",
+        "            self.upper_bounds_[col] = Q3 + 1.5 * IQR\n",
+        "\n",
+        "        return self\n",
+        "\n",
+        "    def transform(self, X):\n",
+        "        check_is_fitted(self, 'features_')\n",
+        "        X = pd.DataFrame(X)\n",
+        "\n",
+        "        for col in self.features_:\n",
+        "            X[col] = np.clip(X[col], self.lower_bounds_[col], self.upper_bounds_[col])\n",
+        "\n",
+        "        return X\n",
+        "\n",
+        "    def set_output(self, *, transform=None):\n",
+        "        return self\n"
       ],
       "metadata": {
         "id": "IkVS0VkYJ-WD"
       },
-      "execution_count": 53,
+      "execution_count": 113,
       "outputs": []
     },
     {
@@ -851,7 +914,7 @@
       "metadata": {
         "id": "4pwGHlr-KAGS"
       },
-      "execution_count": 54,
+      "execution_count": 103,
       "outputs": []
     },
     {
@@ -874,7 +937,7 @@
       "metadata": {
         "id": "NDUm-VIATZGT"
       },
-      "execution_count": 55,
+      "execution_count": 104,
       "outputs": []
     },
     {
@@ -897,7 +960,7 @@
       "metadata": {
         "id": "dkHafC2qKDlS"
       },
-      "execution_count": 57,
+      "execution_count": 105,
       "outputs": []
     },
     {
@@ -920,7 +983,7 @@
       "metadata": {
         "id": "41SM-S7uKFBW"
       },
-      "execution_count": 58,
+      "execution_count": 106,
       "outputs": []
     },
     {
@@ -943,7 +1006,52 @@
       "metadata": {
         "id": "CZpDWGRE8N7K"
       },
-      "execution_count": 59,
+      "execution_count": 107,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# One hot encode features"
+      ],
+      "metadata": {
+        "id": "Bdkwx1oJPmhx"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ohe_pipeline = Pipeline([\n",
+        "    ('ohe', OneHotEncoder(handle_unknown='ignore', sparse_output=False))\n",
+        "])"
+      ],
+      "metadata": {
+        "id": "Vk4OpUCyPpnU"
+      },
+      "execution_count": 108,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Distance features\n",
+        "1. Clip extreme values in distance features to avoid skewing features."
+      ],
+      "metadata": {
+        "id": "-2VEw6ZlW9yj"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "distance_pipeline = Pipeline([\n",
+        "    ('clip', FeatureClipper())\n",
+        "])"
+      ],
+      "metadata": {
+        "id": "yjG1xPK1W_fB"
+      },
+      "execution_count": 114,
       "outputs": []
     },
     {
@@ -978,7 +1086,7 @@
       "metadata": {
         "id": "Y3wOVjihoECG"
       },
-      "execution_count": 60,
+      "execution_count": 115,
       "outputs": []
     },
     {
@@ -994,10 +1102,22 @@
       "cell_type": "code",
       "source": [
         "passenger_features = ['passenger_count']\n",
-        "binary_features = ['is_weekend', 'is_rush_hour', 'pickup_missing', 'dropoff_missing', 'pickup_datetime_missing']\n",
+        "binary_features = ['is_weekend', 'is_rush_hour', 'pickup_missing', 'dropoff_missing', 'pickup_datetime_missing', 'is_peak_hour']\n",
         "cyclic_features = ['hour', 'bearing', 'weekday', 'month']\n",
         "target_features = ['pickup_grid', 'dropoff_grid']\n",
         "ordinal_features = ['pickup_cluster', 'dropoff_cluster']\n",
+        "ohe_features = ['time_of_day']\n",
+        "distance_features = [\n",
+        "    'distance_km',\n",
+        "    'manhattan_km',\n",
+        "    'distance_ratio',\n",
+        "    'cluster_diff',\n",
+        "    'distance_bearing_sin',\n",
+        "    'cluster_bearing_offset',\n",
+        "    'hour_x_is_weekend',\n",
+        "    'hour_x_is_rush_hour',\n",
+        "    'distance_times_cluster_diff',\n",
+        "]\n",
         "\n",
         "preprocessor = ColumnTransformer([\n",
         "    ('pass', passenger_pipeline, passenger_features),\n",
@@ -1005,6 +1125,8 @@
         "    ('tar', target_pipeline, target_features),\n",
         "    ('bin', binary_pipeline, binary_features),\n",
         "    ('ord', ordinal_pipeline, ordinal_features),\n",
+        "    ('ohe', ohe_pipeline, ohe_features),\n",
+        "    ('dis', distance_pipeline, distance_features),\n",
         "], remainder='passthrough')\n",
         "\n",
         "base_learners = [\n",
@@ -1024,6 +1146,7 @@
         "full_pipeline = Pipeline([\n",
         "    ('datetime_features', DatetimeFeatureExtractor(datetime_column='pickup_datetime')),\n",
         "    ('coordinate_features', CoordinateFeatureExtractor(n_clusters=20)),\n",
+        "    ('feature_engineering', FeatureEngineer()),\n",
         "    ('preprocessing', preprocessor),\n",
         "    ('model', stacked_model)\n",
         "])\n",
@@ -1035,7 +1158,7 @@
       "metadata": {
         "id": "0kZ_58p_Ml0F"
       },
-      "execution_count": 61,
+      "execution_count": 127,
       "outputs": []
     },
     {
@@ -1093,25 +1216,25 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WFP06gEgZUCo",
-        "outputId": "f93f2ef0-eb5c-42f0-96d0-9079972339cc"
+        "outputId": "c9ec51ca-4e77-439d-8983-f9a66d21c9d4"
       },
-      "execution_count": 62,
+      "execution_count": 128,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Validation Set Metrics (Un-logged, in dollars):\n",
-            "RMSE: $5.2156\n",
-            "MSE:  $27.2025\n",
-            "MAE:  $2.2186\n",
-            "R²:   0.7081\n",
+            "RMSE: $5.2123\n",
+            "MSE:  $27.1681\n",
+            "MAE:  $2.2133\n",
+            "R²:   0.7084\n",
             "\n",
             "Hold-Out Set Metrics (Un-logged, in dollars):\n",
-            "RMSE: $5.2365\n",
-            "MSE:  $27.4206\n",
-            "MAE:  $2.2092\n",
-            "R²:   0.7115\n"
+            "RMSE: $5.2333\n",
+            "MSE:  $27.3870\n",
+            "MAE:  $2.2063\n",
+            "R²:   0.7119\n"
           ]
         }
       ]
@@ -1151,15 +1274,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6hr0pUAR1LC-",
-        "outputId": "10491b2d-b378-469c-adb2-af78fe6d4e55"
+        "outputId": "111874f9-dd21-4301-c9ec-6502998624a3"
       },
-      "execution_count": 63,
+      "execution_count": 118,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "PermutationExplainer explainer: 1001it [07:52,  2.11it/s]"
+            "PermutationExplainer explainer: 1001it [06:35,  2.46it/s]"
           ]
         },
         {
@@ -1168,27 +1291,40 @@
           "text": [
             "\n",
             "SHAP Feature Importances (All Features):\n",
-            "                         Feature  Mean |SHAP Value|\n",
-            "0         remainder__distance_km           0.329535\n",
-            "1              tar__dropoff_grid           0.067353\n",
-            "2               tar__pickup_grid           0.042019\n",
-            "3               cyclic__hour_cos           0.035821\n",
-            "4            cyclic__bearing_sin           0.033700\n",
-            "5            cyclic__bearing_cos           0.027050\n",
-            "6           ord__dropoff_cluster           0.023862\n",
-            "7               cyclic__hour_sin           0.015425\n",
-            "8            ord__pickup_cluster           0.013376\n",
-            "9        remainder__manhattan_km           0.013358\n",
-            "10           cyclic__weekday_sin           0.010690\n",
-            "11           cyclic__weekday_cos           0.008202\n",
-            "12             cyclic__month_sin           0.007017\n",
-            "13             cyclic__month_cos           0.006033\n",
-            "14         pass__passenger_count           0.005330\n",
-            "15             bin__is_rush_hour           0.000861\n",
-            "16               bin__is_weekend           0.000332\n",
-            "17  bin__pickup_datetime_missing           0.000000\n",
-            "18           bin__pickup_missing           0.000000\n",
-            "19          bin__dropoff_missing           0.000000\n"
+            "                                Feature  Mean |SHAP Value|\n",
+            "0                     clip__distance_km           0.327966\n",
+            "1                     tar__dropoff_grid           0.063032\n",
+            "2                      tar__pickup_grid           0.047075\n",
+            "3          clip__cluster_bearing_offset           0.033566\n",
+            "4                      cyclic__hour_cos           0.032946\n",
+            "5                   cyclic__bearing_sin           0.025823\n",
+            "6            clip__distance_bearing_sin           0.021834\n",
+            "7                  ord__dropoff_cluster           0.019436\n",
+            "8                   cyclic__bearing_cos           0.018480\n",
+            "9                  clip__distance_ratio           0.016964\n",
+            "10                     cyclic__hour_sin           0.015312\n",
+            "11                  ord__pickup_cluster           0.012587\n",
+            "12                   clip__manhattan_km           0.010888\n",
+            "13                  cyclic__weekday_cos           0.010309\n",
+            "14    clip__distance_times_cluster_diff           0.008271\n",
+            "15                  cyclic__weekday_sin           0.008004\n",
+            "16                   clip__cluster_diff           0.006535\n",
+            "17                    cyclic__month_sin           0.006132\n",
+            "18                    cyclic__month_cos           0.006043\n",
+            "19                pass__passenger_count           0.004866\n",
+            "20              clip__hour_x_is_weekend           0.004158\n",
+            "21               ohe__time_of_day_night           0.003331\n",
+            "22            clip__hour_x_is_rush_hour           0.001871\n",
+            "23  remainder__pickup_dropoff_same_grid           0.001793\n",
+            "24                    bin__is_rush_hour           0.000386\n",
+            "25             ohe__time_of_day_morning           0.000252\n",
+            "26           ohe__time_of_day_afternoon           0.000232\n",
+            "27             ohe__time_of_day_evening           0.000186\n",
+            "28                    bin__is_peak_hour           0.000007\n",
+            "29                      bin__is_weekend           0.000005\n",
+            "30         bin__pickup_datetime_missing           0.000000\n",
+            "31                  bin__pickup_missing           0.000000\n",
+            "32                 bin__dropoff_missing           0.000000\n"
           ]
         },
         {
